--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,8 @@
       </nav>
       <div class="action-buttons">
         <button class="login-btn" onclick="window.location.href='/login';">Login</button>
-        <button class="join-btn">Register</button>
+        <button class="join-btn" onclick="window.location.href='/register';">Register</button>
+
       </div>
     </div>
   </header>
